# voxprep

./: .gitignore  .odp-history.json  CLAUDE.md  README.ko.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GUIDE.md  README.md
docs/phases/: phase01-bootstrap.md  phase02-list-parser.md  phase03-slice.md  phase04-asr.md  phase05-review-nav.md  phase06-review-playback.md  phase07-review-edit.md  phase08-review-delete-undo.md  phase09-review-flags.md  phase10-prep-pipeline.md  phase11-progress-feedback.md  phase12-to-wav.md  phase13-extract.md  phase14-train.md  phase15-infer-cli.md  phase16-infer-gui.md  phase17-infer-api.md  phase18-review-unified-filter.md  phase19-odp-refinement.md  phase20-config-file.md
learnings/: DISCOVERIES.md  README.md  phase01-qa.md  phase02-qa.md  phase05-qa.md
src/voxprep/: cli.py
src/voxprep/commands/: asr.py  extract.py  infer.py  prep.py  review.py  slice.py  train.py
src/voxprep/extract/: audio_utils.py  cnhubert.py  hparams.py  hubert_features.py  models_path.py  semantic_tokens.py  speaker_vectors.py  text_features.py
src/voxprep/gptsovits/: config_builder.py  paths.py  runner.py
src/voxprep/inference/: ref_picker.py  session.py  sv.py
src/voxprep/parsing/: errors.py  list_file.py
src/voxprep/pipeline/: runner.py  workspace.py
src/voxprep/review/: confirmer.py  editor.py  issues.py  keybindings.py  loop.py  player.py  render.py  session.py
src/voxprep/slicing/: io.py  options.py  slicer.py
src/voxprep/training/: config_builder.py  process_ckpt.py  (+2 more)
tests/fixtures/: audio.py  doubles.py
tests/integration/: test_asr_pipeline.py  test_prep_pipeline.py  test_slice_command.py
tests/unit/: test_audio_player.py  test_auto_prune_loop.py  test_config_builder.py  test_gptsovits_paths.py  test_issues.py  test_list_parser.py  test_render_with_issues.py  test_review_dispatcher.py  test_review_editor.py  test_review_loop.py  test_review_session.py  test_slicer.py  test_version.py  test_whisper_transcriber.py  test_workspace.py
(+34 files in other folders)
