[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxprep"
version = "0.0.1"
description = "GPT-SoVITS dataset preprocessing CLI (slice / asr / review / prep)"
requires-python = ">=3.10"
readme = "CLAUDE.md"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "prompt_toolkit>=3",
    "numpy<2.0",
    "soundfile>=0.13.1",
    "faster-whisper>=1.2.1",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "transformers>=4.43,<=4.50",
    "pypinyin>=0.55.0",
    "cn2an>=0.5.23",
    "jieba-fast>=0.53",
    "jieba>=0.42.1",
    "pyopenjtalk>=0.4.1",
    "g2p-en>=2.1.0",
    "wordsegment>=1.3.1",
    "jamo>=0.4.1",
    "ko-pron>=1.3",
    "g2pk2>=0.0.3",
    "tojyutping>=3.2.0",
    "opencc>=1.2.0",
    "onnxruntime>=1.24.3",
    "librosa==0.10.2",
    "numba>=0.65.0",
    "inflect>=7.5.0",
    "fast-langdetect>=0.3.1",
    "split-lang>=2.1.1",
    "chardet>=7.4.3",
    "psutil>=7.2.2",
    "rotary-embedding-torch>=0.8.9",
    "tqdm>=4.67.3",
    "python-mecab-ko>=1.3.7",
    "torchaudio>=2.11.0",
]

[project.scripts]
voxprep = "voxprep.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
